feat: implement cron for updating Mobox tokens lvl (#5)
* feat: implement cron for updating Mobox tokens lvl

* feat: temporary implementation for getNftInfo call to chain

* fix: PancakeProtectors cron

---------

Co-authored-by: Chef Huan <huan@pancakeswap.com>